--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "devDependencies": {
     "@concero/operator-utils": "github:concero/operator-utils",
-    "@types/prettier": "3.0.0",
+
     "@typescript-eslint/eslint-plugin": "8.22.0",
     "@typescript-eslint/parser": "8.22.0",
     "eslint": "9.19.0",
@@ -28,9 +28,11 @@
     "eslint-plugin-prettier": "5.2.3",
     "husky": "9.1.7",
     "prettier": "3.4.2",
-    "prettier-plugin-jsdoc": "1.3.2",
     "prettier-plugin-organize-imports": "4.1.0",
-    "typescript": "5.7.3"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3"
   },
-  "dependencies": {}
+  "dependencies": {
+    "viem": "^2.21.55"
+  }
 }
