--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -11,10 +11,7 @@
         "singleQuote": true,
         "bracketSpacing": true,
         "endOfLine": "lf",
-        "plugins": [
-          "prettier-plugin-organize-imports",
-          "prettier-plugin-jsdoc"
-        ],
+        "plugins": ["prettier-plugin-organize-imports"],
         "parser": "typescript"
       }
     }
