--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,19 +1,32 @@
 {
-  "overrides": [
-    {
-      "files": ["*.ts", "**/*.ts"],
-      "options": {
-        "arrowParens": "always",
-        "printWidth": 80,
-        "tabWidth": 2,
-        "trailingComma": "es5",
-        "semi": true,
-        "singleQuote": true,
-        "bracketSpacing": true,
-        "endOfLine": "lf",
-        "plugins": ["prettier-plugin-organize-imports"],
-        "parser": "typescript"
-      }
-    }
-  ]
+    "$schema": "https://json.schemastore.org/prettierrc",
+    "plugins": ["@trivago/prettier-plugin-sort-imports"],
+    "arrowParens": "avoid",
+    "printWidth": 100,
+    "tabWidth": 4,
+    "semi": true,
+    "singleQuote": true,
+    "trailingComma": "all",
+    "overrides": [
+        {
+            "files": ["**/*.ts"],
+            "options": {
+                "importOrderSeparation": true,
+                "importOrderSortSpecifiers": true,
+                "importOrder": [
+                    "^(node:.*|assert|buffer|child_process|cluster|crypto|dgram|dns|events|fs|http|https|net|os|path|punycode|querystring|readline|stream|string_decoder|tls|url|util|v8|vm|worker_threads|zlib)(/.*)?$",
+                    "^\\u0000",
+                    "^@?\\w",
+                    "^(viem|ethers|hardhat)",
+                    "^@concero(/.*)?$",
+                    "^@lanca(/.*)?$",
+                    "^src/.*$",
+                    "^\\.\\.(?!/?$)",
+                    "^\\.\\./?$",
+                    "^\\./(?=.*/)",
+                    "^\\./?$"
+                ]
+            }
+        }
+    ]
 }
