--- a/package.json
+++ b/package.json
@@ -1,39 +1,40 @@
 {
-  "name": "@lanca-io/rebalancer",
-  "version": "1.0.0",
-  "license": "MIT",
-  "bugs": "security@lanca.io",
-  "homepage": "https://lanca.io",
-  "author": "lanca",
-  "description": "",
-  "keywords": [
-    "lanca"
-  ],
-  "engines": {
-    "node": ">=18"
-  },
-  "scripts": {
-    "start": "bun ./src/index.ts",
-    "build": "esbuild src/index.ts --bundle --platform=node --target=node22 --outdir=dist --format=esm",
-    "lint": "eslint --config .eslint.config.mjs",
-    "format": "prettier --config .prettierrc.json --write **/*.{ts,json}",
-    "check-updates": "npx npm-check-updates"
-  },
-  "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "8.22.0",
-    "@typescript-eslint/parser": "8.22.0",
-    "esbuild": "^0.25.8",
-    "eslint": "9.19.0",
-    "eslint-config-prettier": "10.0.1",
-    "eslint-plugin-prettier": "5.2.3",
-    "husky": "9.1.7",
-    "prettier": "3.4.2",
-    "prettier-plugin-organize-imports": "4.1.0",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.8.3"
-  },
-  "dependencies": {
-    "@concero/operator-utils": "github:concero/operator-utils",
-    "viem": "^2.21.55"
-  }
+    "name": "@lanca-io/rebalancer",
+    "version": "1.0.0",
+    "license": "MIT",
+    "bugs": "security@lanca.io",
+    "homepage": "https://lanca.io",
+    "author": "lanca",
+    "description": "",
+    "keywords": [
+        "lanca"
+    ],
+    "engines": {
+        "node": ">=20"
+    },
+    "scripts": {
+        "start": "bun ./src/index.ts",
+        "build": "esbuild src/index.ts --bundle --platform=node --target=node22 --outdir=dist --format=esm",
+        "lint": "eslint --config .eslint.config.mjs",
+        "format": "prettier --config .prettierrc.json --write \"**/*.{ts,json}\"",
+        "check-updates": "npx npm-check-updates"
+    },
+    "devDependencies": {
+        "@trivago/prettier-plugin-sort-imports": "^5.2.2",
+        "@typescript-eslint/eslint-plugin": "8.22.0",
+        "@typescript-eslint/parser": "8.22.0",
+        "esbuild": "^0.25.8",
+        "eslint": "9.19.0",
+        "eslint-config-prettier": "10.0.1",
+        "eslint-plugin-prettier": "5.2.3",
+        "husky": "9.1.7",
+        "prettier": "3.4.2",
+        "prettier-plugin-organize-imports": "4.1.0",
+        "ts-node": "^10.9.2",
+        "typescript": "^5.8.3"
+    },
+    "dependencies": {
+        "@concero/operator-utils": "github:concero/operator-utils",
+        "viem": "^2.21.55"
+    }
 }
